--- a/README.html
+++ b/README.html
@@ -611,7 +611,7 @@ prpties$change_stats
 <h3>References:</h3>
 <p>Rousseeuw, P. J. 1987. “Silhouettes: A Graphical Aid to the Interpretation and Validation of Cluster Analysis.” Journal of Computational and Applied Mathematics, no. 20: 53–6. <a href="https://www.bibsonomy.org/bibtex/bc0f62c7895f91c787354d03f23da976">link</a></p>
 <p>Caliński, T., and J. Harabasz. 1974. “A Dendrite Method for Cluster Analysis.” Communications in Statistics-Theory and Methods, 3(1): 1–27. <a href="https://www.tandfonline.com/doi/abs/10.1080/03610927408827101">link</a></p>
-<p>Adepeju, M., Langton, S. and Bannister, J. 2021. Anchored k-medoids: a novel adaptation of k-means further refined to measure instability in the exposure to crime. Journal of Computational Social Science <a href="https://link.springer.com/article/10.1007/s42001-021-00103-1#citeas">link</a>.</p>
+<p>Adepeju, M., Langton, S. and Bannister, J. 2021. Anchored k-medoids: a novel adaptation of k-means further refined to measure instability in the exposure to crime. Journal of Computational Social Science <a href="https://doi.org/10.1007/s42001-021-00103-1">link</a>.</p>
 </div>
 </div>
 
